{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 16,
  "lineage": "7fc027d8-1034-da51-9f06-723943a5c35d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vnic01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/adb0b0b5-7d1b-4a47-a8e4-c08888bae46d/resourceGroups/RG-PRD01/providers/Microsoft.Network/networkInterfaces/nic-vm-win01",
            "internal_domain_name_suffix": "mjclt5ri5guutawca2nubd5owc.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/adb0b0b5-7d1b-4a47-a8e4-c08888bae46d/resourceGroups/RG-PRD01/providers/Microsoft.Network/publicIPAddresses/ip-vmwin01",
                "subnet_id": "/subscriptions/adb0b0b5-7d1b-4a47-a8e4-c08888bae46d/resourceGroups/RG-PRD01/providers/Microsoft.Network/virtualNetworks/vnet-prd01/subnets/sub-prd01"
              }
            ],
            "location": "eastus2",
            "name": "nic-vm-win01",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "RG-PRD01"
          },
          "dependencies": [
            "azurerm_public_ip.ip01",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub01",
            "azurerm_virtual_network.vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vnic02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/adb0b0b5-7d1b-4a47-a8e4-c08888bae46d/resourceGroups/RG-PRD01/providers/Microsoft.Network/networkInterfaces/nic-vm-lnx01",
            "internal_domain_name_suffix": "wgaic0q1am0ezlfknbpa3yem3a.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/adb0b0b5-7d1b-4a47-a8e4-c08888bae46d/resourceGroups/RG-PRD01/providers/Microsoft.Network/publicIPAddresses/ip-vmlnx01",
                "subnet_id": "/subscriptions/adb0b0b5-7d1b-4a47-a8e4-c08888bae46d/resourceGroups/RG-PRD01/providers/Microsoft.Network/virtualNetworks/vnet-prd02/subnets/sub-prd02"
              }
            ],
            "location": "eastus2",
            "name": "nic-vm-lnx01",
            "private_ip_address": "172.16.0.4",
            "private_ip_addresses": [
              "172.16.0.4"
            ],
            "resource_group_name": "RG-PRD01"
          },
          "dependencies": [
            "azurerm_public_ip.ip02",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub02",
            "azurerm_virtual_network.vnet02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/adb0b0b5-7d1b-4a47-a8e4-c08888bae46d/resourceGroups/RG-PRD01/providers/Microsoft.Network/networkSecurityGroups/nsg-prd01",
            "location": "eastus2",
            "name": "nsg-prd01",
            "resource_group_name": "RG-PRD01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "192.168.1.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-RDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/adb0b0b5-7d1b-4a47-a8e4-c08888bae46d/resourceGroups/RG-PRD01/providers/Microsoft.Network/networkSecurityGroups/nsg-prd02",
            "location": "eastus2",
            "name": "nsg-prd02",
            "resource_group_name": "RG-PRD01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "172.16.0.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/adb0b0b5-7d1b-4a47-a8e4-c08888bae46d/resourceGroups/RG-PRD01/providers/Microsoft.Network/publicIPAddresses/ip-vmwin01",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "ip-vmwin01",
            "resource_group_name": "RG-PRD01",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ip02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/adb0b0b5-7d1b-4a47-a8e4-c08888bae46d/resourceGroups/RG-PRD01/providers/Microsoft.Network/publicIPAddresses/ip-vmlnx01",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "ip-vmlnx01",
            "resource_group_name": "RG-PRD01",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/adb0b0b5-7d1b-4a47-a8e4-c08888bae46d/resourceGroups/RG-PRD01/providers/Microsoft.Network/virtualNetworks/vnet-prd01/subnets/sub-prd01",
            "name": "sub-prd01",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-PRD01",
            "virtual_network_name": "vnet-prd01"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/adb0b0b5-7d1b-4a47-a8e4-c08888bae46d/resourceGroups/RG-PRD01/providers/Microsoft.Network/virtualNetworks/vnet-prd02/subnets/sub-prd02",
            "name": "sub-prd02",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-PRD01",
            "virtual_network_name": "vnet-prd02"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/adb0b0b5-7d1b-4a47-a8e4-c08888bae46d/resourceGroups/RG-PRD01/providers/Microsoft.Network/virtualNetworks/vnet-prd01/subnets/sub-prd01",
            "network_security_group_id": "/subscriptions/adb0b0b5-7d1b-4a47-a8e4-c08888bae46d/resourceGroups/RG-PRD01/providers/Microsoft.Network/networkSecurityGroups/nsg-prd01",
            "subnet_id": "/subscriptions/adb0b0b5-7d1b-4a47-a8e4-c08888bae46d/resourceGroups/RG-PRD01/providers/Microsoft.Network/virtualNetworks/vnet-prd01/subnets/sub-prd01"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg01",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub01",
            "azurerm_virtual_network.vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/adb0b0b5-7d1b-4a47-a8e4-c08888bae46d/resourceGroups/RG-PRD01/providers/Microsoft.Network/virtualNetworks/vnet-prd02/subnets/sub-prd02",
            "network_security_group_id": "/subscriptions/adb0b0b5-7d1b-4a47-a8e4-c08888bae46d/resourceGroups/RG-PRD01/providers/Microsoft.Network/networkSecurityGroups/nsg-prd02",
            "subnet_id": "/subscriptions/adb0b0b5-7d1b-4a47-a8e4-c08888bae46d/resourceGroups/RG-PRD01/providers/Microsoft.Network/virtualNetworks/vnet-prd02/subnets/sub-prd02"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg02",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub02",
            "azurerm_virtual_network.vnet02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "feb94462-f928-49a9-82c2-071b408feeb2",
            "id": "/subscriptions/adb0b0b5-7d1b-4a47-a8e4-c08888bae46d/resourceGroups/RG-PRD01/providers/Microsoft.Network/virtualNetworks/vnet-prd01",
            "location": "eastus2",
            "name": "vnet-prd01",
            "resource_group_name": "RG-PRD01"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6a8180b1-031b-4c34-acaa-685e0ee08ce8",
            "id": "/subscriptions/adb0b0b5-7d1b-4a47-a8e4-c08888bae46d/resourceGroups/RG-PRD01/providers/Microsoft.Network/virtualNetworks/vnet-prd02",
            "location": "eastus2",
            "name": "vnet-prd02",
            "resource_group_name": "RG-PRD01"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}